Added unit tests for bigquery connector.